# dig-relay-protocol

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SPEC.md
.github/workflows/: ci.yml  publish.yml
src/: descriptor.rs  ids.rs  lib.rs  mesh.rs  message.rs  seal.rs
tests/: kat.rs  seal.rs
