# dig-relay-protocol — the canonical NODE-TO-RELAY wire for the DIG Network relay.
#
# This crate is the single source of truth for the RLY-001..RLY-007 relay message set that a DIG
# Node speaks to a relay server (`relay.dig.net`). It is extracted BYTE-IDENTICAL from the wire that
# was previously vendored across dig-gossip (`src/relay/relay_types.rs`, the authoritative shape),
# dig-relay (`src/wire.rs`, server side) and dig-nat (`src/relay.rs`, the relay client) — so a
# consumer that swaps its vendored copy for this crate sees ZERO wire change.
#
# Dependency philosophy: the relay wire is JSON (serde) over a WebSocket and depends only on serde +
# std — no transport, no Chia stack. The wire identifies peers by a HEX STRING `peer_id` (not a
# 32-byte `Bytes32`), so — to stay byte-identical — this crate keeps `String` and pulls in no
# chia-protocol / chia-wallet-sdk type. Relay↔relay framing does not exist yet and is OUT of scope
# (the mesh, dig_ecosystem #873).
[package]
name = "dig-relay-protocol"
version = "0.3.0"
edition = "2021"
rust-version = "1.75.0"
license = "Apache-2.0 OR MIT"
description = "Canonical NODE-TO-RELAY wire protocol for the DIG Network relay — the RLY-001..RLY-007 RelayMessage set + RelayPeerInfo, JSON over WebSocket, byte-identical to the wire vendored across dig-gossip/dig-relay/dig-nat."
repository = "https://github.com/DIG-Network/dig-relay-protocol"
readme = "README.md"
keywords = ["relay", "p2p", "nat", "protocol", "dig"]
categories = ["network-programming"]

[features]
# Default = the pure-wire types only (serde + std), keeping the crate a zero-crypto-dependency
# building block that any consumer can pull in to speak/parse the wire.
default = []
# `seal` pulls in the recipient-seal machinery (dig-message G1-DHKEM + dig-identity BLS G1 keys) so a
# consumer can SEAL/OPEN the v2 sealed-control (band 0x0800) and mesh (band 0x0900) frames — and
# derive/verify a relay's BLS identity + RelayDescriptor. Both deps are crates.io (no git deps), so the
# crate stays publishable with the feature on.
seal = ["dep:dig-message", "dep:dig-identity", "dep:serde_json"]

[dependencies]
# The wire is JSON with `#[serde(tag = "type")]`; serde is the only always-on runtime dependency.
serde = { version = "1", features = ["derive"] }
# Fixed-width BLS keys/signatures (48/96 bytes) exceed serde's built-in array impls (≤32); big-array
# gives them serde support AND free exact-length validation on decode. Pure, no_std, tiny.
serde-big-array = "0.5"

# Recipient-seal machinery — only compiled with the `seal` feature (see [features]).
dig-message = { version = "0.5", optional = true }
dig-identity = { version = "0.4.2", optional = true }
# The sealed inner payload is JSON (the same encoding as the plaintext wire); only needed with `seal`.
serde_json = { version = "1", optional = true }

[dev-dependencies]
# KATs assert the exact serialized JSON bytes + round-trip through serde_json.
serde_json = "1"
# The round-trip test helpers name the serde traits directly.
serde = { version = "1", features = ["derive"] }

[package.metadata.docs.rs]
# Document the sealed API on docs.rs.
all-features = true

[profile.release]
overflow-checks = true
